<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="crimes_empty">There are no crimes yet…</string>
    <string name="remove_crime">Remove crime</string>
    <string name="add_crime_button">Add a new crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on
    %2$s, %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect_btnText">Call Suspect</string>
    <string name="move_to_settings">Open Settings</string>
    <string name="zoomed_photo_iv">Zoomed Photo</string>
    <string name="title_is_blank_toast">"Title can not be blank!"</string>
    <string name="no_number_toast">"Selected suspect has no phone number, so you can't call him."</string>
    <string name="permission_read_contacts_title">Permission needed"</string>
    <string name="permission_read_contacts_message">"We need the permission to read contacts in order to choose a
        suspect and the ability to call them."</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="crime_content_description">The title is %1$s, Crime status: %2$s, The date of crime is %3$s</string>
    <string name="crime_not_solved_image">The crime is not solved yet</string>
</resources>